--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ nav {
     margin: 2em;
     position: fixed;
     top: 0em;
-    z-index: 100;
+    z-index: 70;
     font-size: 0.85em;
     background-color: rgba(11, 11, 11, 0.95);}
 nav a {
@@ -51,11 +51,8 @@ canvas {
     position: fixed;
     width: 100%;
     height: 100%;
-    overflow: hidden;
     margin: 0;
     padding: 0;
-    touch-action: 0;
-    z-index: -1;
 }
 
 /* main */
@@ -96,6 +93,8 @@ footer a p {
     float: left;
 }
 
+
+/* media query */
 
 @media (max-width: 530px) {
     nav {
