touch-action: none

--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ nav .active:hover{
 }
 
 canvas {
+    touch-action: none;
     background-color: white;
     position: fixed;
     width: 100%;
@@ -74,6 +75,11 @@ canvas {
     main span {
         display: inline-block;
         padding-top: 1.6em;
+    }
+
+    main a {
+        color: #fefbf8;
+        text-decoration: underline;
     }
 
 /* footer */
