--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ footer a {
     font-size: 0.6em;
     margin: 0.4em;
     margin-top: 1.6em;
-    background-color: black;
+    background-color: rgba(11, 11, 11, 0.85);
     color: #595148;
     text-decoration: none;
 }
@@ -118,6 +118,7 @@ footer a p {
     }
 
     main {
+        position: relative;
         left: 0;
         padding: 4px;
         font-size: 0.9em;
@@ -134,14 +135,14 @@ footer a p {
         display: block;
         font-size: 0.55em;
         margin: 0;
-        margin-top: 0;
-        background-color: black;
+        margin-top: 2px;
+        background-color: rgba(11, 11, 11, 0.85);
         color: #595148;
         text-decoration: none;
     }
 
     footer a p {
         display: block;
-        float: none;
+        float: left;
     }
 }
