--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ img {
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #111111;
-    background-image: url(https://storage.googleapis.com/webdesignledger.pub.network/LaT/edd/2016/02/seamless-background-textures-14.jpg);
+    background-image: url(/img/bg.jpg);
     background-repeat: repeat;
     background-attachment: fixed;
     color: #fefbf8;
@@ -118,7 +118,7 @@ footer a p {
     }
 
     main {
-        position: relative;
+        position: absolute;
         left: 0;
         padding: 4px;
         font-size: 0.9em;
