--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ img {
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #111111;
-    background-image: url(/img/bg.jpg);
+    background-image: url(../img/bg.jpg);
     background-repeat: repeat;
     background-attachment: fixed;
     color: #fefbf8;
