--- a/css/style.css
+++ b/css/style.css
@@ -64,19 +64,20 @@ canvas {
         position: absolute;
         left: 10em;
         font-family: arial;
-        max-width: 64ch;
+        max-width: 128ch;
         margin: 2em auto 0 auto;
         padding: 1em 2em;
         line-height: 1.4;
         z-index: 80;
+        font-size: 0.8em;
     }
     main h1 {
         font-family: Arial, Helvetica, sans-serif;
         font-size: 1.1em;
     }
     main span {
-        display: inline-block;
-        padding-top: 1.6em;
+        display: block;
+        padding-top: 0.6em;
     }
 
     main a {
@@ -87,6 +88,12 @@ canvas {
         color: #111111;
         text-decoration: none;
         background-color: #fefbf8;
+    }
+    main div {
+        padding-right: 6em;
+        position: relative;
+        width: 50%;
+        float: left;
     }
 
 
